--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,22 @@
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
+body {
+  background-image: url("/bg.jpg");
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  color: white;
+}
+
+.container {
+  display: flex;
+  width: 90vw;
+  height: 90vh;
+  background-color: rgba(3, 3, 91, 0.465);
+  border-radius: 12px;
+  backdrop-filter: blur(17px) saturate(180%);
+  border: 1px solid rgba(255, 255, 255, 0.235);
+}
